--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "framer-motion": "^6",
+    "mongoose": "^6.8.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
